--- a/print.html
+++ b/print.html
@@ -175,7 +175,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="介绍"><a class="header" href="#介绍">介绍</a></h1>
-<p>本文将描述如何实现一个推箱子游戏, 代码示例使用 Rust 语言编写.
+<p>本文将描述如何实现一个推箱子游戏 📦, 代码示例使用 Rust 语言 🦀 编写.<br />
 推箱子游戏具有以下特点:</p>
 <ul>
 <li>规则简单. 可以专注于实现功能, 而非理解复杂的游戏规则和机制.</li>
@@ -184,6 +184,12 @@
 <li>有需要深入钻研的求解器, 用于自动求解推箱子关卡.</li>
 </ul>
 <p>本文将由浅入深的介绍上面功能并提供实现的思路.</p>
+<p>本文不会探讨的内容有:</p>
+<ul>
+<li>推箱子的其他变种. 感兴趣的读者可以自行了解, 可以作为一种拓展.</li>
+<li>Rust 语言本身. 本文中出现的算法适用于其他编程语言. 因为示例代码使用了 Rust 语言, 可能会探讨 Rust 实现该算法的细节, 但不会专门介绍 Rust 语言的特性.</li>
+<li>游戏引擎.</li>
+</ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="关卡"><a class="header" href="#关卡">关卡</a></h1>
 <p>推箱子关卡使用最广泛的格式为 XSB, 最初由 XSokoban 所使用. 该格式使用 ASCII 字符来表示地图元素, 并支持注释和附加元数据.<br />
 以关卡 <code>Boxworld #1</code> 为例:</p>
@@ -405,9 +411,10 @@ impl IndexMut&lt;Vector2&lt;i32&gt;&gt; for Map {
 <h2 id="从解决方案构建关卡"><a class="header" href="#从解决方案构建关卡">从解决方案构建关卡</a></h2>
 <p>TODO</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="标准化"><a class="header" href="#标准化">标准化</a></h1>
-<p>有些关卡为了美观会在原关卡的基础上添加一些装饰, 但这些装饰并不影响关卡的解决方案, 本质上还是一样的关卡.
+<p>有些关卡为了美观会在原关卡的基础上添加一些装饰, 但这些装饰并不影响关卡的解决方案, 本质上还是一样的关卡.<br />
 标准化可以将关卡中与求解无关/无用的元素去除, 这有利于本质相同的关卡的去重.</p>
-<p>理想状态下, 具有相同最优解的关卡都可以被标准化为同一个关卡. 理论上可以先对关卡解析自动求解, 获得最优解决方案后再<a href="level/parse_level.html#%E4%BB%8E%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%88%E6%9E%84%E5%BB%BA%E5%85%B3%E5%8D%A1">从解决方案构建关卡</a>.</p>
+<p>理想状态下, 具有相同最优解的关卡都可以被标准化为同一个关卡. 理论上可以先对关卡解析自动求解, 获得最优解决方案后再<a href="level/parse_level.html#%E4%BB%8E%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%88%E6%9E%84%E5%BB%BA%E5%85%B3%E5%8D%A1">从解决方案构建关卡</a>.<br />
+但自动求解可能是耗时且困难的, 因此还需要无需关卡解决方案的标准化方法. 虽然结果不完美, 但是快速.</p>
 <p>关卡的标准化可以分为以下几个步骤:</p>
 <ol>
 <li>
@@ -425,11 +432,15 @@ impl IndexMut&lt;Vector2&lt;i32&gt;&gt; for Map {
 <li>
 <p>标准化外墙.</p>
 <p>外墙有不同的包围类型, 如:</p>
-<pre><code class="language-txt"> ###    #####
-#@$.#   #@$.#
- ###    #####
+<pre><code class="language-txt"> ###
+#@$.#
+ ###
+
+#####
+#@$.#
+#####
 </code></pre>
-<p>应该统一为其中一种类型, 通常标准化为右边的类型.</p>
+<p>应该统一为其中一种类型, 通常使用下面的类型.</p>
 </li>
 <li>
 <p>去除无法到达的箱子.</p>
@@ -447,7 +458,7 @@ impl IndexMut&lt;Vector2&lt;i32&gt;&gt; for Map {
 <li>
 <p>玩家初始位置标准化.</p>
 <p>需要对先对玩家的位置进行标准化. 因为即使玩家位置不一样, 但都在同一个区域也可以转变为同一个关卡.
-一个简单的玩家位置标准化方法是将玩家的位置设为可达区域的位置中 X 坐标最小, 其次 Y 坐标最小的位置.</p>
+一个简单的玩家位置标准化方法是将玩家的位置设为玩家可达区域的位置中 X 坐标最小, 其次 Y 坐标最小的位置.</p>
 </li>
 </ol>
 <h2 id="激进的标准化"><a class="header" href="#激进的标准化">激进的标准化</a></h2>
