--- a/introduction.html
+++ b/introduction.html
@@ -174,7 +174,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="介绍"><a class="header" href="#介绍">介绍</a></h1>
-<p>本文将描述如何实现一个推箱子游戏, 代码示例使用 Rust 语言编写.
+<p>本文将描述如何实现一个推箱子游戏 📦, 代码示例使用 Rust 语言 🦀 编写.<br />
 推箱子游戏具有以下特点:</p>
 <ul>
 <li>规则简单. 可以专注于实现功能, 而非理解复杂的游戏规则和机制.</li>
@@ -183,6 +183,12 @@
 <li>有需要深入钻研的求解器, 用于自动求解推箱子关卡.</li>
 </ul>
 <p>本文将由浅入深的介绍上面功能并提供实现的思路.</p>
+<p>本文不会探讨的内容有:</p>
+<ul>
+<li>推箱子的其他变种. 感兴趣的读者可以自行了解, 可以作为一种拓展.</li>
+<li>Rust 语言本身. 本文中出现的算法适用于其他编程语言. 因为示例代码使用了 Rust 语言, 可能会探讨 Rust 实现该算法的细节, 但不会专门介绍 Rust 语言的特性.</li>
+<li>游戏引擎.</li>
+</ul>
 
                     </main>
 
