--- a/level/normalization.html
+++ b/level/normalization.html
@@ -174,9 +174,10 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="标准化"><a class="header" href="#标准化">标准化</a></h1>
-<p>有些关卡为了美观会在原关卡的基础上添加一些装饰, 但这些装饰并不影响关卡的解决方案, 本质上还是一样的关卡.
+<p>有些关卡为了美观会在原关卡的基础上添加一些装饰, 但这些装饰并不影响关卡的解决方案, 本质上还是一样的关卡.<br />
 标准化可以将关卡中与求解无关/无用的元素去除, 这有利于本质相同的关卡的去重.</p>
-<p>理想状态下, 具有相同最优解的关卡都可以被标准化为同一个关卡. 理论上可以先对关卡解析自动求解, 获得最优解决方案后再<a href="parse_level.html#%E4%BB%8E%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%88%E6%9E%84%E5%BB%BA%E5%85%B3%E5%8D%A1">从解决方案构建关卡</a>.</p>
+<p>理想状态下, 具有相同最优解的关卡都可以被标准化为同一个关卡. 理论上可以先对关卡解析自动求解, 获得最优解决方案后再<a href="parse_level.html#%E4%BB%8E%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%88%E6%9E%84%E5%BB%BA%E5%85%B3%E5%8D%A1">从解决方案构建关卡</a>.<br />
+但自动求解可能是耗时且困难的, 因此还需要无需关卡解决方案的标准化方法. 虽然结果不完美, 但是快速.</p>
 <p>关卡的标准化可以分为以下几个步骤:</p>
 <ol>
 <li>
@@ -194,11 +195,15 @@
 <li>
 <p>标准化外墙.</p>
 <p>外墙有不同的包围类型, 如:</p>
-<pre><code class="language-txt"> ###    #####
-#@$.#   #@$.#
- ###    #####
+<pre><code class="language-txt"> ###
+#@$.#
+ ###
+
+#####
+#@$.#
+#####
 </code></pre>
-<p>应该统一为其中一种类型, 通常标准化为右边的类型.</p>
+<p>应该统一为其中一种类型, 通常使用下面的类型.</p>
 </li>
 <li>
 <p>去除无法到达的箱子.</p>
@@ -216,7 +221,7 @@
 <li>
 <p>玩家初始位置标准化.</p>
 <p>需要对先对玩家的位置进行标准化. 因为即使玩家位置不一样, 但都在同一个区域也可以转变为同一个关卡.
-一个简单的玩家位置标准化方法是将玩家的位置设为可达区域的位置中 X 坐标最小, 其次 Y 坐标最小的位置.</p>
+一个简单的玩家位置标准化方法是将玩家的位置设为玩家可达区域的位置中 X 坐标最小, 其次 Y 坐标最小的位置.</p>
 </li>
 </ol>
 <h2 id="激进的标准化"><a class="header" href="#激进的标准化">激进的标准化</a></h2>
