--- a/level/index.html
+++ b/level/index.html
@@ -289,6 +289,54 @@ impl IndexMut&lt;Vector2&lt;i32&gt;&gt; for Map {
 <p>RLE 编码后的关卡通常还会使用 <code>|</code> 来分割行, 而非 <code>\n</code>. 使其看上去更加紧凑:</p>
 <pre><code class="language-txt">3#|#.3#|#*$-#|#--@#|5#
 </code></pre>
+<h2 id="特殊关卡"><a class="header" href="#特殊关卡">特殊关卡</a></h2>
+<h3 id="玩家不可达区域存在箱子"><a class="header" href="#玩家不可达区域存在箱子">玩家不可达区域存在箱子</a></h3>
+<p><img src="../assets/sasquatch_41.png" alt="Sasquatch #41" /></p>
+<pre><code class="language-txt">   #####
+   #   #
+ ###   ########
+##  ***    # # #
+ #  * *    ## # #####
+##  ***   ## # ##   ##
+ ###   #### # # #   #
+   #   # # # ####$ $###
+  ##   ## # ##  $...$ ##
+   ##### # ##    .@.  #
+        # # #   $...$ ##
+         ########$ $###
+                #   #
+                #####
+</code></pre>
+<h3 id="存在只有空元素的行"><a class="header" href="#存在只有空元素的行">存在只有空元素的行</a></h3>
+<p><img src="../assets/steaming_hot.png" alt="&quot;Steaming Hot&quot; by David Buchweitz" /></p>
+<pre><code class="language-txt">  #      #
+ #   #  #
+  # #  #
+   # #  #
+  #   #  #
+ #   #  #
+  # #  #
+-
+##########
+#........####
+# $$$$$$$#  #
+#.$......#  #
+# $$$$$$ #  #
+#......$+#  #
+#$$$$$$$ #  #
+#        ####
+##########
+</code></pre>
+<h3 id="无完整外墙"><a class="header" href="#无完整外墙">无完整外墙</a></h3>
+<p>部分推箱子程序支持无完整外墙的关卡.<br />
+在本文中, 这种关卡属于无效关卡. 但可以通过为其添加外墙的方式来转换为有效关卡.</p>
+<p><img src="../assets/no_walls_level.png" alt="&quot;No walls&quot; by Rincewind" /></p>
+<pre><code class="language-txt">* ** *
+  **
+**@$.*
+  **
+* ** *
+</code></pre>
 
                     </main>
 
