--- a/print.html
+++ b/print.html
@@ -287,8 +287,8 @@ impl IndexMut&lt;Vector2&lt;i32&gt;&gt; for Map {
     // ... SKIP ...
 }
 </code></pre>
-<h2 id="行程编码run-length-encoding"><a class="header" href="#行程编码run-length-encoding">行程编码(Run length encoding)</a></h2>
-<p>行程编码(Run length encoding, RLE)经常被用于压缩推箱子的关卡和解决方案.</p>
+<h2 id="行程编码run-length-encoding"><a class="header" href="#行程编码run-length-encoding">行程编码(Run-length encoding)</a></h2>
+<p>行程编码(Run-length encoding, RLE)经常被用于压缩推箱子的关卡和解决方案.</p>
 <pre><code class="language-txt">###
 #.###
 #*$ #
