deploy: e9d1c3848bbccd387e5e48b143a7d4b4fa0c5881

--- a/level/index.html
+++ b/level/index.html
@@ -271,7 +271,7 @@ impl IndexMut&lt;Vector2&lt;i32&gt;&gt; for Map {
 }
 </code></pre>
 <h2 id="行程编码run-length-encoding"><a class="header" href="#行程编码run-length-encoding">行程编码(Run-length encoding)</a></h2>
-<p>行程编码(Run-length encoding, RLE)经常被用于压缩推箱子的关卡和解决方案.</p>
+<p><a href="https://en.wikipedia.org/wiki/Run-length_encoding">行程编码</a>(run-length encoding, RLE)经常被用于压缩推箱子的关卡和解决方案.</p>
 <pre><code class="language-txt">###
 #.###
 #*$ #
