deploy: 4f73e602e668d209fa6334c42aff0165dcc2c949

--- a/print.html
+++ b/print.html
@@ -537,8 +537,8 @@ impl IndexMut&lt;Vector2&lt;i32&gt;&gt; for Map {
 <p>这是一个最简单的非标准关卡, 因为其没有箱子和目标, 解为空.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="术语表"><a class="header" href="#术语表">术语表</a></h1>
 <div class="table-wrapper"><table><thead><tr><th>中文</th><th>英文</th></tr></thead><tbody>
-<tr><td>求解器</td><td>Solver</td></tr>
-<tr><td>解/解决方案</td><td>Solution</td></tr>
+<tr><td>求解器</td><td>solver</td></tr>
+<tr><td>解/解决方案</td><td>solution</td></tr>
 </tbody></table>
 </div>
                     </main>
