--- a/glossary.html
+++ b/glossary.html
@@ -178,8 +178,8 @@
                     <main>
                         <h1 id="术语表"><a class="header" href="#术语表">术语表</a></h1>
 <div class="table-wrapper"><table><thead><tr><th>中文</th><th>英文</th></tr></thead><tbody>
-<tr><td>求解器</td><td>Solver</td></tr>
-<tr><td>解/解决方案</td><td>Solution</td></tr>
+<tr><td>求解器</td><td>solver</td></tr>
+<tr><td>解/解决方案</td><td>solution</td></tr>
 </tbody></table>
 </div>
                     </main>
