--- a/level/normalization.html
+++ b/level/normalization.html
@@ -224,7 +224,7 @@
 <li>
 <p>玩家初始位置标准化.</p>
 <p>需要对先对玩家的位置进行标准化. 因为即使玩家位置不一样, 但都在同一个区域也可以转变为同一个关卡.
-一个简单的玩家位置标准化方法是将玩家的位置设为玩家可达区域的位置中 X 坐标最小, 其次 Y 坐标最小的位置.</p>
+一个简单的玩家位置标准化方法是将玩家的位置设为玩家可达区域的位置中 Y 坐标最小, 其次 X 坐标最小的位置.</p>
 </li>
 </ol>
 <h2 id="激进的标准化"><a class="header" href="#激进的标准化">激进的标准化</a></h2>
