--- a/level/index.html
+++ b/level/index.html
@@ -208,6 +208,7 @@ Author: Thinking Rabbit
 <tr><td><code>*</code></td><td>Box on goal</td></tr>
 </tbody></table>
 </div>
+<p>除了上面的元数据, 还有一种用于多行注释的特殊元数据. 内容通过 <code>comment:</code> 和 <code>comment-end:</code> 包裹.</p>
 <h2 id="表示地图"><a class="header" href="#表示地图">表示地图</a></h2>
 <p>地图共包含 5 种元素, 这些元素可能在一个格子内叠加(比如玩家位于目标上). 因此可以使用比特位来表示地图中的每个格子包含哪些元素.
 创建用于表示地图元素的比特位:</p>
