deploy: 96676f2d317785fddb4f148fabbbd7d69fdad635

--- a/level/construct.html
+++ b/level/construct.html
@@ -448,7 +448,7 @@
 }
 </code></pre>
 <p><code>to_groups</code> 接受包含多个关卡的字符串, 返回包含单个关卡的字符串切片的迭代器.</p>
-<p>这种实现方式有以下有点:</p>
+<p>这种实现方式有以下优点:</p>
 <ul>
 <li>稍加修改便可以支持从大文件中流式读取关卡.</li>
 <li>读取第 n 个关卡. 跳过前 n-1 个关卡, 只对第 n 个关卡的数据进行解析.</li>
