deploy: 8c7e39ca51549e1aa8bff48896d77dd333cb428f

--- a/print.html
+++ b/print.html
@@ -640,19 +640,19 @@ impl IndexMut&lt;Vector2&lt;i32&gt;&gt; for Map {
 <p>解析地图数据可以分为以下几个部分:</p>
 <ol>
 <li>
-<p><strong>计算地图尺寸</strong>: 等于通过玩家移动范围加 1 (外墙).</p>
+<p><strong>计算地图尺寸</strong>: 地图的尺寸等于玩家移动范围加上 1, 以包含外墙.</p>
 </li>
 <li>
-<p><strong>模拟玩家移动</strong>: 记录三组数据, 分别是: 当前箱子位置和箱子初始位置.</p>
+<p><strong>模拟玩家移动</strong>: 记录三组数据, 分别是: <em>当前箱子位置</em>和箱子初始位置.</p>
 <p>玩家移动到的位置设为地板.
-若玩家推动了箱子, 且该箱子的位置不再当前箱子位置中, 添加到箱子位置中.
-箱子当前位置在模拟结束后, 当前箱子位置即最终箱子位置. 若解决方案正确, 那么最终箱子位置与目标位置相同.</p>
+若玩家推动了箱子, 且该箱子移动前的位置不再<em>当前箱子位置</em>中, 添加到箱子位置中.
+箱子当前位置在模拟结束后, <em>当前箱子位置</em>即最终箱子位置. 若解决方案正确, 那么最终箱子位置与目标位置相同.</p>
 </li>
 <li>
-<p><strong>在地板周围添加墙</strong>.</p>
+<p><strong>在地板周围添加墙壁</strong>: 在地板周围添加墙壁, 形成完整的关卡结构.</p>
 </li>
 <li>
-<p><strong>在构建的关卡里验证解决方案</strong>: 若验证不通过, 则表示解决方案不正确.</p>
+<p><strong>验证解决方案</strong>: 在构建的关卡里验证解决方案. 若验证不通过, 则表示解决方案不正确.</p>
 </li>
 </ol>
 <pre><code class="language-rs">impl Map {
