--- a/introduction.html
+++ b/introduction.html
@@ -192,6 +192,11 @@
 <li>Rust 语言本身. 本文中出现的算法适用于其他编程语言. 因为示例代码使用了 Rust 语言, 可能会探讨 Rust 实现该算法的细节, 但不会专门介绍 Rust 语言的特性.</li>
 <li>游戏引擎.</li>
 </ul>
+<p>完整的项目代码位于:</p>
+<ul>
+<li><a href="https://github.com/shenmian/soukoban">ShenMian/soukoban</a>: 推箱子相关算法实现.</li>
+<li><a href="https://github.com/shenmian/sokoban-rs">ShenMian/sokoban-rs</a>: 推箱子游戏实现, 使用 <a href="https://github.com/bevyengine/bevy">Bevy</a> 引擎.</li>
+</ul>
 
                     </main>
 
