deploy: fde323748b571edb1b345004460375ba2305602c

--- a/level/normalization.html
+++ b/level/normalization.html
@@ -177,23 +177,23 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="标准化"><a class="header" href="#标准化">标准化</a></h1>
-<p>有些关卡为了美观会在原关卡的基础上添加一些装饰, 但这些装饰并不影响关卡的解决方案, 本质上还是一样的关卡.<br />
-标准化可以将关卡中与求解无关/无用的元素去除, 这有利于本质相同的关卡的去重.</p>
-<p>理想状态下, 具有相同最优解的关卡都可以被标准化为同一个关卡. 理论上可以先对关卡解析自动求解, 获得最优解决方案后再<a href="parse_level.html#%E4%BB%8E%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%88%E6%9E%84%E5%BB%BA%E5%85%B3%E5%8D%A1">从解决方案构建关卡</a>.<br />
-但自动求解可能是耗时且困难的, 因此还需要无需关卡解决方案的标准化方法. 虽然结果不完美, 但是快速.</p>
+<p>有些关卡为了美观会在原关卡的基础上添加一些装饰, 这些装饰性的元素在本质上并不影响关卡的解法.<br />
+标准化的目的是移除这些与求解无关或冗余的元素.</p>
+<p>理想状态下, 任何具有相同步数最优解的关卡都可以被标准化为同一个关卡. 理论上可以先对关卡解析自动求解, 获得最优解决方案后再<a href="parse_level.html#%E4%BB%8E%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%88%E6%9E%84%E5%BB%BA%E5%85%B3%E5%8D%A1">从解决方案构建关卡</a>来得到标准化后的关卡.<br />
+但自动求解通常是耗时且困难的, 因此还需要一种不依赖于关卡解决方案的快速标准化方法. 尽管该方法得到的标准化结果并不完美.</p>
 <p>关卡的标准化可以分为以下几个步骤:</p>
 <ol>
 <li>
 <p>将不可移动的箱子变为墙.</p>
-<p>箱子可能默认就处于死锁状态, 所以可以当作墙体处理.</p>
+<p>箱子可能默认就处于死锁状态, 可以当作墙体处理.</p>
 </li>
 <li>
 <p>将无需使用的地板变为墙.</p>
-<p>被且仅被三面墙包围的地板是死胡同, 可以当作墙处理.</p>
+<p>如果一个地板被三面墙包围, 属于死胡同, 可以当作墙体处理.</p>
 </li>
 <li>
-<p>去除无法到达的墙.</p>
-<p>无法于玩家产生交互, 因此删除不影响关卡的解决方案.</p>
+<p>移除无法到达的墙.</p>
+<p>部分墙无法与玩家产生交互, 因此移除这部分墙不影响关卡的解决方案.</p>
 </li>
 <li>
 <p>标准化外墙.</p>
@@ -209,20 +209,20 @@
 <p>应该统一为其中一种类型, 通常使用下面的类型.</p>
 </li>
 <li>
-<p>去除无法到达的箱子.</p>
-<p>无法于玩家产生交互, 因此删除不影响关卡的解决方案.</p>
+<p>移除无法到达的箱子.</p>
+<p>部分箱子无法与玩家产生交互, 因此移除这部分箱子不影响关卡的解决方案.</p>
 </li>
 <li>
 <p>收紧地图尺寸.</p>
 <p>地图中的元素被删除可能导致地图尺寸缩小.</p>
 </li>
 <li>
-<p>对旋转和翻转进行标准化.</p>
+<p>对旋转和翻转标准化.</p>
 <p>将经过不同旋转和翻转的关卡标准化为同一个关卡.
 一个简单的方法是计算不同旋转和翻转后地图的哈希值，选择哈希值最小的版本.</p>
 </li>
 <li>
-<p>玩家初始位置标准化.</p>
+<p>玩家初始位置标准化. <strong>(注意: 可能移动玩家位置, 进而改变关卡的解决方案)</strong></p>
 <p>需要对先对玩家的位置进行标准化. 因为即使玩家位置不一样, 但都在同一个区域也可以转变为同一个关卡.
 一个简单的玩家位置标准化方法是将玩家的位置设为玩家可达区域的位置中 Y 坐标最小, 其次 X 坐标最小的位置.</p>
 </li>
@@ -239,7 +239,7 @@
 # @*#
 #####
 </code></pre>
-<p>玩家左侧死胡同属于无用的区域, 使用墙体填充. 玩家右侧位于目标上的箱子处于死锁状态, 属于无用的箱子和目标, 使用墙体填充. 最后去除多余的墙体得到激进的标准化结果:</p>
+<p>玩家左侧死胡同属于无用的区域, 使用墙体填充. 玩家右侧位于目标上的箱子处于死锁状态, 属于无用的箱子和目标, 使用墙体填充. 最后移除多余的墙体得到激进的标准化结果:</p>
 <pre><code class="language-txt">###
 #@#
 ###
