deploy: 7a2b4305da80928ca864f60855678ac318e23618

--- a/print.html
+++ b/print.html
@@ -810,7 +810,7 @@ for line in str.split(['\n', '|']) { ... SKIP ... }
 <p>有些关卡为了美观会在原关卡的基础上添加一些装饰, 这些装饰性的元素在本质上并不影响关卡的解法.<br />
 标准化的目的是移除这些与求解无关或冗余的元素.</p>
 <p>理想状态下, 任何具有相同步数最优解的关卡都可以被标准化为同一个关卡. 理论上可以先对关卡解析自动求解, 获得最优解决方案后再<a href="level/parse_level.html#%E4%BB%8E%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%88%E6%9E%84%E5%BB%BA%E5%85%B3%E5%8D%A1">从解决方案构建关卡</a>来得到标准化后的关卡.<br />
-但自动求解通常是耗时且困难的, 因此还需要一种不依赖于关卡解决方案的快速标准化方法. 尽管该方法得到的标准化结果并不完美.</p>
+但对于 NP 难的推箱子问题来说, 自动求解最优解决方案通常是耗时且困难的, 因此还需要一种不依赖于关卡解决方案的快速标准化方法. 尽管该方法得到的标准化结果并不完美.</p>
 <p>关卡的标准化可以分为以下几个步骤:</p>
 <ol>
 <li>
